fixed spacing in albums scroll

--- a/frontend/src/components/Albums/AlbumSelect/SelectAlbum.css
+++ b/frontend/src/components/Albums/AlbumSelect/SelectAlbum.css
@@ -36,3 +36,18 @@
     flex-direction: column;
 
 }
+
+.album-list-current {
+    display: flex;
+    justify-content: 'center';
+    align-items: center;
+
+}
+
+.uploadTitle {
+    font-family: Interstate, Lucida Grande, Lucida Sans Unicode, Lucida Sans, Garuda, Verdana, Tahoma, sans-serif;
+    font-weight: 100;
+    font-size: 24px;
+    color: #333;
+
+}
